--- a/timezone/templates/user-side/single_product.html
+++ b/timezone/templates/user-side/single_product.html
@@ -164,7 +164,7 @@
 							{% else %}
 							{% if user.is_authenticated %}
                             {% if cart_item %}
-                            <button type="submit" class="btn-product btn-cart">
+                            <button type="submit" class="button">
                                 <a href="{% url 'cart:cart' %}">Go to Cart</a>
                             </button>
                             {% else %}
