--- a/timezone/templates/user-side/shop.html
+++ b/timezone/templates/user-side/shop.html
@@ -116,22 +116,48 @@
 
                     <nav aria-label="Page navigation">
                         <ul class="pagination justify-content-center">
-                            <li class="page-item disabled">
-                                <a class="page-link page-link-prev" href="#" aria-label="Previous" tabindex="-1" aria-disabled="true">
-                                    <span aria-hidden="true"><i class="icon-long-arrow-left"></i></span>Prev
-                                </a>
-                            </li>
-                            <li class="page-item active" aria-current="page"><a class="page-link" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                            <li class="page-item-total">of 6</li>
-                            <li class="page-item">
-                                <a class="page-link page-link-next" href="#" aria-label="Next">
-                                    Next <span aria-hidden="true"><i class="icon-long-arrow-right"></i></span>
-                                </a>
-                            </li>
+                            {% if obj.has_previous %}
+                                <li class="page-item">
+                                    <a class="page-link page-link-prev" href="?page={{ obj.previous_page_number }}{% if request.GET.sort_by %}&sort_by={{ request.GET.sort_by }}{% else %}&sort_by=-product__created_at{% endif %}{% if request.GET.category %}&category={{ request.GET.category }}{% endif %}{% if request.GET.color %}&color={{ request.GET.color }}{% endif %}{% if request.GET.brand %}&brand={{ request.GET.brand }}{% endif %}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}" aria-label="Previous">
+                                        <span aria-hidden="true"><i class="icon-long-arrow-left"></i></span>Prev
+                                    </a>
+                                </li>
+                            {% else %}
+                                <li class="page-item disabled">
+                                    <a class="page-link page-link-prev" href="#" aria-label="Previous" tabindex="-1" aria-disabled="true">
+                                        <span aria-hidden="true"><i class="icon-long-arrow-left"></i></span>Prev
+                                    </a>
+                                </li>
+                            {% endif %}
+                    
+                            {% for num in obj.paginator.page_range %}
+                                {% if obj.number == num %}
+                                    <li class="page-item active" aria-current="page">
+                                        <span class="page-link">{{ num }}</span>
+                                    </li>
+                                {% else %}
+                                    <li class="page-item">
+                                        <a class="page-link" href="?page={{ num }}{% if request.GET.sort_by %}&sort_by={{ request.GET.sort_by }}{% else %}&sort_by=-product__created_at{% endif %}{% if request.GET.category %}&category={{ request.GET.category }}{% endif %}{% if request.GET.color %}&color={{ request.GET.color }}{% endif %}{% if request.GET.brand %}&brand={{ request.GET.brand }}{% endif %}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}">{{ num }}</a>
+                                    </li>
+                                {% endif %}
+                            {% endfor %}
+                    
+                            {% if obj.has_next %}
+                                <li class="page-item">
+                                    <a class="page-link page-link-next" href="?page={{ obj.next_page_number }}{% if request.GET.sort_by %}&sort_by={{ request.GET.sort_by }}{% else %}&sort_by=-product__created_at{% endif %}{% if request.GET.category %}&category={{ request.GET.category }}{% endif %}{% if request.GET.color %}&color={{ request.GET.color }}{% endif %}{% if request.GET.brand %}&brand={{ request.GET.brand }}{% endif %}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}" aria-label="Next">
+                                        Next <span aria-hidden="true"><i class="icon-long-arrow-right"></i></span>
+                                    </a>
+                                </li>
+                            {% else %}
+                                <li class="page-item disabled">
+                                    <a class="page-link page-link-next" href="#" aria-label="Next" tabindex="-1" aria-disabled="true">
+                                        Next <span aria-hidden="true"><i class="icon-long-arrow-right"></i></span>
+                                    </a>
+                                </li>
+                            {% endif %}
                         </ul>
                     </nav>
+                    
                 </div><!-- End .col-lg-9 -->
 
                 <aside class="col-lg-3 order-lg-first">
@@ -143,12 +169,12 @@
 
                         <div class="widget widget-collapsible">
                             <h3 class="widget-title">
-                                <a data-toggle="collapse" href="#widget-1" role="button" aria-expanded="true" aria-controls="widget-1">
+                                <a data-toggle="collapse" href="#widget-1" role="button" aria-expanded="false" aria-controls="widget-1">
                                     Category
                                 </a>
                             </h3><!-- End .widget-title -->
-
-                            <div class="collapse show" id="widget-1">
+                        
+                            <div class="collapse" id="widget-1">
                                 <div class="widget-body">
                                     <div class="filter-items filter-items-count">
                                         {% for category in categories %}
@@ -163,48 +189,38 @@
                                 </div><!-- End .widget-body -->
                             </div><!-- End .collapse -->
                         </div><!-- End .widget -->
-
+                        
                         <div class="widget widget-collapsible">
                             <h3 class="widget-title">
-                                <a data-toggle="collapse" href="#widget-3" role="button" aria-expanded="true" aria-controls="widget-3">
+                                <a data-toggle="collapse" href="#widget-2" role="button" aria-expanded="false" aria-controls="widget-2">
                                     Colour
                                 </a>
                             </h3><!-- End .widget-title -->
-
-
-                            <div class="collapse show" id="widget-3">
+                        
+                            <div class="collapse" id="widget-2">
                                 <div class="widget-body">
-                                    <div class="filter-colors">
-   
+                                    <div class="filter-items filter-items-count">
                                         {% for colour in colours %}
-                                        <div class="custom-control custom-checkbox">
-                                            <input class="custom-control-input" 
-                                                   type="checkbox" 
-                                                   name="color" 
-                                                   value="{{ colour.colour }}" 
-                                                   id="color-{{ colour.id }}" 
-                                                   {% if color_filter == colour.colour %}checked{% endif %} 
-                                                   onchange="document.getElementById('sortingAndFilterForm').submit()">
-                                            <label class="custom-control-label" 
-                                                   for="color-{{ colour.id }}">
-                                                <span class="color-indicator" style="background: {{ colour.color_code }};"></span> {{ colour.colour }}
-                                            </label>
+                                        <div class="filter-item">
+                                            <div class="custom-control custom-checkbox">
+                                                <input class="custom-control-input" type="checkbox" name="colour" value="{{ colour.id }}" id="colour-{{ colour.id }}" {% if colour.id == colour_filter %}checked{% endif %} onchange="document.getElementById('sortingAndFilterForm').submit()">
+                                                <label class="custom-control-label" for="colour-{{ colour.id }}">{{ colour.colour }}</label>
+                                            </div>
                                         </div>
                                         {% endfor %}
-                         
-                                    </div>
+                                    </div><!-- End .filter-items -->
                                 </div><!-- End .widget-body -->
                             </div><!-- End .collapse -->
-       
-
+                        </div><!-- End .widget -->
+                        
                         <div class="widget widget-collapsible">
                             <h3 class="widget-title">
-                                <a data-toggle="collapse" href="#widget-4" role="button" aria-expanded="true" aria-controls="widget-4">
+                                <a data-toggle="collapse" href="#widget-4" role="button" aria-expanded="false" aria-controls="widget-4">
                                     Brand
                                 </a>
                             </h3><!-- End .widget-title -->
-
-                            <div class="collapse show" id="widget-4">
+                        
+                            <div class="collapse" id="widget-4">
                                 <div class="widget-body">
                                     <div class="filter-items">
                                         <div class="filter-item">
@@ -219,6 +235,7 @@
                                 </div><!-- End .widget-body -->
                             </div><!-- End .collapse -->
                         </div><!-- End .widget -->
+                        
                     </div><!-- End .sidebar sidebar-shop -->
                 </aside><!-- End .col-lg-3 -->
             </div><!-- End .row -->
