--- a/timezone/templates/user-side/wallet.html
+++ b/timezone/templates/user-side/wallet.html
@@ -126,7 +126,7 @@
                                         <tr>
                                             <td>{{ transaction.id }}</td>
                                             <td>{{ transaction.transaction_type }}</td>
-                                            <td>{{ transaction.transaction_purpose }}</td>
+                                            <td>{{ transaction.transation_purpose }}</td>
                                             <td>₹{{ transaction.amount }}</td>
                                             <td>{{ transaction.discription }}</td>
                                             <td>{{ transaction.created_at }}</td>
