--- a/timezone/templates/login/signup.html
+++ b/timezone/templates/login/signup.html
@@ -49,7 +49,7 @@
                                 <h2>Already have an account?</h2>
                                 <p>There are advances being made in science and technology
                                     everyday, and a good example of this is the</p>
-                                <a href="login.html" class="btn_3">Log in</a>
+                                <a href="{% url 'login:login' %}" class="btn_3">Log in</a>
                             </div>
                         </div>
                     </div>
